# alpine_virtual_stain_data_preprocessing

./: 1.generate_loaddata.py  2.pool_loadata.py  3.qc_sites.py  4.datasplit.py  LICENSE  X.demo_dataset.py  config.yml  pyproject.toml
utils/: loaddata_utils.py
whole_img_qc_output/: 4.datasplit.py
whole_img_qc_output/BR00143976/: Experiment.csv
whole_img_qc_output/BR00143977/: Experiment.csv
whole_img_qc_output/BR00143978/: Experiment.csv
whole_img_qc_output/BR00143979/: Experiment.csv
whole_img_qc_output/BR00143980/: Experiment.csv
whole_img_qc_output/BR00143981/: Experiment.csv
