[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpine-vs-preprocess"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "pe2loaddata @ git+https://github.com/broadinstitute/pe2loaddata.git@4c9aee0b9fbe74bb7308b1114dabf2895113552d"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]
